# vela-slides

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTES.md  NOTICE  README.md  SECURITY.md  brainstorm-quick-start.md  hyper-sprint.md  hyper-sprint.render-offline.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-server.cmd
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  dependabot.yml
.hyper-sprint/: burst-boot.sh  burst-hunter.json  burst-init.js  config-claude-cloud.md  config.md  render-offline.js  sprint-2026-07-04-1-envoy.md  vela-verbs.mjs
.playwright/: cli.config.json
bench/: README.md  baseline.json  vela-interaction-bench.sh
coverage-analysis/: 00-MASTER-coverage-report.md  01-reducer-cli-deck.md  02-blocks-security-render.md  03-engine-server-desktop-go.md  04-ui-e2e-export.md
docs/: ARCHITECTURE.md  BACKLOG.md  DEPENDENCIES.md  DESKTOP.md  DEVELOPMENT.md  EVAL-RUNBOOK.md  NEXT-SPRINT-CRs.md  POWERPOINT-EXPORT-RESEARCH.md  SCREENSHOTS.md  SECURITY.md
evals/: CLAUDE.md  README.md  dashboard.html  eval-scenarios.json  run-isolated.sh  run.sh
examples/: business-report.json  business-report.vela  course-training.json  course-training.vela  starter-deck.json  (+7 more)
vela-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vela-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  storage.rs
vela-desktop/src-tauri/src/agent/: cli_adapter.rs  discovery.rs  http_adapter.rs  mcp_adapter.rs  mod.rs
vela-desktop/src-tauri/src/file/: handler.rs  mod.rs
(+445 files in other folders)
